# cortexflow

./: .gitignore  AUTHORS  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CONTEXT.md  README.md  pytest.ini
.afk/: config
.github/workflows/: ci.yml  release.yml
.sandcastle/: Dockerfile  main.mts  prompt.md
.scratch/button-pipeline-example/: PRD.md
.scratch/button-pipeline-example/issues/: 01-scaffold-with-button-reader.md  02-add-debouncer-with-lockout-flow.md  03-add-classifier-and-uicontroller-click-path.md  04-add-long-press-branch.md  05-add-double-click-branch.md  06-host-stdin-driver-diagrams-and-readme.md
.scratch/cortexflow-v1/issues/: 00-rename-framework-to-cortexflow.md  01-type-name-identity.md  02-framework-assert-fault-path.md  03-trace-infrastructure.md  04-messaging-envelope-allocator.md  05-module-base-dispatch.md  06-runtime-skeleton-lifecycle.md  07-foreign-thread-post.md  08-composition-validator-compile-fail-tests.md  09-cache-slots-fanout.md  10-cache-raii-subscription.md  11-clock-manual-steady.md  12-timer-service.md  13-flow-skeleton.md  14-flow-state-locals.md  15-flow-lifecycle.md  16-platform-typedef-swap-posix.md  17-minimal-app-integration-fixture.md  18-freertos-backend.md  19-bare-metal-backend.md  20-host-realtime-timer-tick.md
.scratch/generated-flow-diagrams/: PRD.md
.scratch/generated-flow-diagrams/issues/: 01-flow-diagrams-end-to-end.md  02-module-graph-end-to-end.md  03-ci-drift-guard.md
.scratch/receiver-owned-messages/: PRD.md
.scratch/receiver-owned-messages/issues/: 01-nest-messages-in-minimal-app.md  02-nest-messages-in-test-runtime.md
.scratch/release-packaging-v0.1.0/: PRD.md
.scratch/release-packaging-v0.1.0/issues/: 01-license-and-spdx-rollout.md  02-cmake-hygiene-for-subproject-consumption.md  03-fetchcontent-consumer-smoke-test.md  04-release-process-artifacts.md  05-readme-consumer-docs.md  06-cut-v0.1.0.md  07-build-surface-cmake-target-alias-and-features.md
cmake/: CompileFail.cmake
cmake/targets/: host.cmake  posix.cmake
docs/: architecture.md  prd.md  releasing.md
docs/adr/: 0020-receiver-owned-messages.md  0021-generated-diagrams-from-cpp-source.md  0022-private-compile-flags-for-rtti-and-exceptions.md  0023-release-packaging-strategy.md  README.md
docs/agents/: platform-backends.md
docs/diagrams/: README.md
docs/diagrams/flows/: clickclassifier.flow.mmd  consumer.flow.mmd  debouncer.flow.mmd  uicontroller.flow.mmd
docs/diagrams/modules/: button_pipeline.modules.mmd  minimal_app.modules.mmd
examples/button_pipeline/: CMakeLists.txt  README.md  app.cpp  app.hpp  keys.hpp  main.cpp
examples/button_pipeline/modules/: button_reader.cpp  button_reader.hpp  click_classifier.cpp  click_classifier.hpp  debouncer.cpp  debouncer.hpp  ui_controller.cpp  ui_controller.hpp
examples/minimal_app/: CMakeLists.txt  README.md  app.cpp  app.hpp  keys.hpp  main.cpp  messages.hpp
examples/minimal_app/modules/: consumer.cpp  consumer.hpp  producer.cpp  producer.hpp
include/cortexflow/: assert.hpp  cache.hpp  clock.hpp  flow.hpp  messaging.hpp  module.hpp  runtime.hpp  subscription.hpp  timer.hpp  trace.hpp  type_name.hpp
include/framework/: assert.hpp  messaging.hpp  trace.hpp  type_name.hpp
platform/host/: heap_allocator.cpp  steady_clock.cpp  trace_sink.cpp
platform/host/cortexflow/: platform.hpp
platform/posix/: heap_allocator.cpp  steady_clock.cpp  trace_sink.cpp
platform/posix/cortexflow/: platform.hpp
scripts/: conftest.py  gen-diagrams.py
scripts/diagrams/: __init__.py  brace_scope.py  cli.py  composition.py  flow_extractor.py  ir.py  mermaid.py  module_graph_extractor.py
scripts/tests/: test_brace_scope.py  test_e2e.py  test_flow_extractor.py  test_mermaid_renderer.py
scripts/tests/fixtures/flows/: done_flow.cpp  done_flow.hpp  initial_tag.cpp  initial_tag.hpp  multi_branch.cpp  multi_branch.hpp  transition_now.cpp  transition_now.hpp  two_state.cpp  two_state.hpp
scripts/tests/snapshots/: fixture_app.modules.mmd  three_state.flow.mmd
src/cortexflow/: clock.cpp  fault.cpp  messaging.cpp  trace.cpp
src/framework/: fault.cpp  messaging.cpp  trace.cpp
tests/: CMakeLists.txt  check_spdx_headers.sh
tests/compile_fail/: copy_envelope.cpp  copy_message_ptr.cpp  duplicate_module.cpp  send_target_no_handler.cpp  send_target_not_in_module_list.cpp
tests/integration/: test_button_pipeline.cpp  test_button_pipeline_trace.cpp  test_cache.cpp  test_flow.cpp  test_minimal_app.cpp  test_platform.cpp  test_runtime.cpp
tests/integration/fetchcontent_consumer/: CMakeLists.txt  consumer_main.cpp  exceptions_consumer.cpp
tests/unit/: test_assert.cpp  test_clock.cpp  test_flow.cpp  test_messaging.cpp  test_module.cpp  test_timer.cpp  test_trace.cpp  test_type_name.cpp  trace_elision_check.cpp
